[package]
name = "go2web"
version = "0.9.0"
edition = "2024"

[dependencies]
clap = {version = "4.5.38", features= ["derive"]}
html2text = "0.15.0"
native-tls = "0.2.14"
regex = "1.11.1"
scraper = "0.23.1"
serde = {version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
urlencoding = "2.1.3"


[[bin]]
name = "go2web"
path = "src/main.rs"
